<resources>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_cities">Select City</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_map">Map</string>

    <string name="app_name" translatable="false">WeatherApp</string>
    <string name="cityName">Moscow</string>
    <string name="buttonToday">Today</string>
    <string name="buttonTom">Tomorrow</string>
    <string name="buttonAfterTom">After Tomorrow</string>
    <string name="temp">6 C</string>
    <string name="windSpeedAndDirection">Wind: NW, 2 m/s</string>
    <string name="wcf_text">Feels like : </string>
    <string name="windChillFactor">3 C</string>
    <string name="stringHumid">Humidity</string>
    <string name="stringWeatherDescription">Cloudy</string>
    <string name="stringContent">hourly forecast for today using ViewPager</string>
    <string name="stringContentTom">hourly forecast for Tomorrow using ViewPager</string>
    <string name="stringContentAfterTom">hourly forecast for AfterTomorrow using ViewPager</string>
    <string name="enter_city_name">enter City name</string>
    <string name="backButton">Back</string>
    <string name="findButton">Find</string>
    <string name="buttonChangeCity">Cities</string>
    <string name="textCity1">New York</string>
    <string name="textWeather">Bright</string>
    <string name="textTemperature">13 C</string>
    <string name="textTemperature1">4 C</string>
    <string name="textCity2">Tokyo</string>
    <string name="cloudy_rainy">Rainy</string>
    <string name="settings">Settings</string>
    <string name="textDarkTheme">Dark theme</string>
    <string name="textSwitchDarkThemeOff">Off</string>
    <string name="textSwitchDarkThemeOn">On</string>
    <string name="wind_speed">Wind speed</string>
    <string name="metersPerSecond">m/s</string>
    <string name="kilometers">km/h</string>
    <string name="settingsTemperature">Temperature</string>
    <string name="settingsTextCelsius">Cels</string>
    <string name="settingsTextFahrenheit">Fh</string>
    <string name="about_city">About City</string>
    <string name="urlNewYork">https://en.wikipedia.org/wiki/New_York_City</string>
    <string name="urlTokyo">https://en.wikipedia.org/wiki/Tokyo</string>
    <string name="urlMoscow">https://en.wikipedia.org/wiki/Moscow</string>
    <string name="snackBarSure">Are you sure?</string>
    <string name="confirm">confirm</string>
    <string name="Sorry">Sorry!</string>
    <string name="cityNotFoundExclamation">Seems to be that city %1$s doesn\'t exist</string>
    <string name="cityForecastDownloadFailed">Cannot download forecast for %1$s</string>
    <string name="cityAlreadyInList">City %1$s already in listWeather</string>
    <string name="OKBtn">OK</string>
    <string name="didn_t_know">Hmm</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="remove">Remove</string>
    <string name="windDirection">Wind: %1$s, %2$s %3$s</string>
    <string name="windMetersPerSecond">m/s</string>
    <string name="windMilesPerHour">m/h</string>
    <string name="ThunderTitle">Riders on the storm</string>
    <string name="within3Hours">expected within 3 hours</string>
    <string name="viewMap">View Map</string>
    <string name="action_map">Locate</string>
    <string name="menu_map_mode">View Map</string>
    <string name="menu_map_mode_normal">Normal</string>
    <string name="menu_map_mode_satellite">Satellite</string>
    <string name="menu_map_mode_terrain">Terrain</string>
    <string name="measurement_system">Measurement system</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="sign_out">Sign Out</string>

    <string-array name="linksToWeatherPictures">
        <item>https://images.unsplash.com/photo-1419833173245-f59e1b93f9ee?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1050&amp;q=80</item>
    </string-array>

    <string-array name="days">
        <item>today</item>
        <item>tomorrow</item>
        <item>after tomorrow</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
    </string-array>
    <string-array name="weathers">
        <item>Rainy</item>
        <item>Sunny</item>
        <item>Snow</item>
        <item>Rainy</item>
        <item>Sunny</item>
        <item>Rainy</item>
        <item>Rainy</item>
    </string-array>
    <string-array name="maxTemperatures">
        <item>16 C</item>
        <item>8 C</item>
        <item>-2 C</item>
        <item>16 C</item>
        <item>8 C</item>
        <item>16 C</item>
        <item>8 C</item>
    </string-array>
    <string-array name="windDirection">
        <item>NE</item>
        <item>E</item>
        <item>SE</item>
        <item>S</item>
        <item>SW</item>
        <item>W</item>
        <item>NW</item>
        <item>N</item>
    </string-array>
</resources>
