<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_map_mode"
        android:orderInCategory="100"
        android:title="@string/menu_map_mode"
        android:icon="@android:drawable/ic_menu_mapmode"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/menu_map_mode_normal"
                app:showAsAction="never"
                android:orderInCategory="1"
                android:title="@string/menu_map_mode_normal" />

            <item android:id="@+id/menu_map_mode_satellite"
                app:showAsAction="never"
                android:orderInCategory="2"
                android:title="@string/menu_map_mode_satellite" />

            <item android:id="@+id/menu_map_mode_terrain"
                app:showAsAction="never"
                android:orderInCategory="2"
                android:title="@string/menu_map_mode_terrain"/>

        </menu>
    </item>
</menu>