<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_city_name"
            android:inputType="textPersonName"
            app:layout_constraintStart_toEndOf="@id/backButton"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <Button
            android:id="@+id/findButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/findButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/city1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/textCity1"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButton" />

        <TextView
            android:id="@+id/weather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textWeather"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/temper"
            app:layout_constraintStart_toEndOf="@+id/city1"
            app:layout_constraintTop_toTopOf="@id/city1" />

        <TextView
            android:id="@+id/temper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textTemperature"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="@id/weather"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@id/city1"/>

        <TextView
            android:id="@+id/city2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/textCity2"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/weather2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cloudy_rainy"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/weather"
            app:layout_constraintTop_toTopOf="@id/city2" />

        <TextView
            android:id="@+id/temper2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textTemperature"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="@id/weather2"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>