<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/citiesSelect"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/buttonChangeCity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/cityName"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/citiesSelect"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSettings"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/temp"
            android:textSize="42sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/city" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/windSpeedAndDirection"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wcf" />

        <TextView
            android:id="@+id/wcf_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wcf_text"
            android:textSize="24sp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@id/wcf"
            app:layout_constraintTop_toBottomOf="@id/weatherDescription"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/wcf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/windChillFactor"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toEndOf="@id/wcf_text"
            app:layout_constraintTop_toTopOf="@id/wcf_text" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/stringHumid"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wind" />

        <TextView
            android:id="@+id/weatherDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/stringWeatherDescription"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temperature" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/aboutCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_city"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:icon="@drawable/outline_info_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/humidity"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>