<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textViewSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/containerSignIn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSettings">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="start|center_vertical">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_out_button"
            android:text="@string/sign_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"/>
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"/>
    </FrameLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/containerSignIn"/>

    <TextView
        android:id="@+id/settingsDarkTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/textDarkTheme"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <Switch
        android:id="@+id/switchDarkTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/textSwitchDarkThemeOff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/settingsDarkTheme"/>

    <View
        android:id="@+id/settingsDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/switchDarkTheme" />

    <TextView
        android:id="@+id/settingsMeasurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/measurement_system"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsDivider" />

    <RadioGroup
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@id/settingsMeasurement"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioButtonMetric"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/metric"/>

        <RadioButton
            android:id="@+id/radioButtonImperial"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/imperial" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>